--- a/index.html
+++ b/index.html
@@ -14,12 +14,26 @@
                     <div class="cartao__conteudo__pergunta">
                         O que é JS?
                     </div>
+                    <div class="cartao__conteudo__resposta">
+                        Linguagem de Programação
+                    </div>
                 </div>
             </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        O que é HTML?
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        Linguagem de Marcação
+                    </div>
+                </div>
+            </article>       
         </section>
     </main>
     <footer>
-
+        <p>Projeto criado por Prof Rômulo na aula de Programação</p>
     </footer>
 </body>
 </html>
