--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        O que é JS?
+                        <p>O que é JS?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        Linguagem de Programação
+                        <p>Linguagem de Programação</p>
                     </div>
                 </div>
             </article>
@@ -36,5 +36,7 @@
     <footer>
         <p>Projeto criado por Prof Rômulo na aula de Programação</p>
     </footer>
+<script src="app.js"></script>
+<script src="perguntas.js"></script>
 </body>
 </html>
