--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <section id="container">
-            <article class="cartao">
+            <!--<article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -20,17 +20,7 @@
                     </div>
                 </div>
             </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Programação</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        O que é HTML?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        Linguagem de Marcação
-                    </div>
-                </div>
-            </article>       
+            -->       
         </section>
     </main>
     <footer>
